tests/cases/standard-library/errors/boxed/std-boxed-as-mut-ptr-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var boxed = std::boxed::new<i64>(ref mut zone, 11);
  let raw = boxed.as_mut_ptr();
  zone::reset(ref mut zone);
  return ptr_load(raw);
}
